# ghc-prim-compat

./: AUTHORS.txt  CHANGELOG.md  README.md  ghc-prim-compat.cabal
src/GHC/Exts/: Compat.hs
