name:                ghc-prim-compat
version:             1.0.0.0
license:             BSD3
synopsis:            Compatibility module for GHC primops.
homepage:            https://github.com/thoughtpolice/ghc-prim-compat/wiki
bug-reports:         http://github.com/thoughtpolice/ghc-prim-compat/issues
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2011-2013
author:              Austin Seipp
maintainer:          Austin Seipp <austin@well-typed.com>
build-type:          Simple
cabal-version:       >= 1.2

description:
  This package provides primop compatibility between GHC 7.6 and GHC
  7.8.

extra-source-files:
  .travis.yml
  AUTHORS.txt
  README.md
  CONTRIBUTING.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/thoughtpolice/ghc-prim-compat.git

library
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010
  hs-source-dirs:     src

  build-depends:
    base >= 4 && < 5
  exposed-modules:
    GHC.Exts.Compat
